--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -1,3 +1,14 @@
 body {
   font-family: Roboto;
 }
+
+.hero {
+  &.has-cover {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    .hero-body {
+      background-image: linear-gradient(135deg, rgba(0, 209, 178, 0.85), rgba(0, 209, 178, 0.5));
+    }
+  }
+}
