--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -7,8 +7,14 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    .hero-body {
-      background-image: linear-gradient(135deg, rgba(0, 209, 178, 0.85), rgba(0, 209, 178, 0.5));
-    }
+    // .hero-body {
+    //   background-image: linear-gradient(135deg, rgba(0, 209, 178, 0.85), rgba(0, 209, 178, 0.5));
+    // }
+  }
+  .hero-background {
+    position: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 }
