--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -1,6 +1,12 @@
 body {
   font-family: Roboto;
 }
+.navbar-brand {
+  align-items: start;
+}
+.logo {
+  height: 32px;
+}
 
 .hero {
   &.has-hero-background {
@@ -14,15 +20,25 @@ body {
   }
 }
 
-.layout-enter-active, .layout-leave-active {
-  transition: opacity .5s
-}
-.layout-enter, .layout-leave-active {
-  opacity: 0
-}
+.layout-enter-active, .layout-leave-active, 
 .page-enter-active, .page-leave-active {
-  transition: opacity .5s
+  transition: opacity .25s ease-in;
 }
+.layout-enter, .layout-leave-active, 
 .page-enter, .page-leave-active {
-  opacity: 0
+  opacity: 0;
+}
+
+/* Enter and leave animations can use different */
+/* durations and timing functions.              */
+.slide-fade-enter-active {
+  transition: all .5s ease;
+}
+.slide-fade-leave-active {
+  transition: all .25s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active below version 2.1.8 */ {
+  transform: translateX(10px);
+  opacity: 0;
 }
