--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -20,17 +20,23 @@ body {
   }
 }
 
-.page-enter,
-.page-leave-to,
 .layout-enter,
 .layout-leave-to {
   opacity: 0;
 }
-.page-enter-to,
-.page-leave-active,
-.layout-enter-active,
+.layout-enter-to,
 .layout-leave-active {
-  transition: all 100ms ease;
+  transition: opacity 100ms ease-out;
+}
+
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+  transform: scale(1.025);
+}
+.page-enter-to,
+.page-leave-active {
+  transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1) 100ms;
 }
 
 .nav-enter,
@@ -40,5 +46,5 @@ body {
 }
 .nav-enter-to,
 .nav-leave-active {
-  transition: transform 200ms ease, opacity 400ms ease;
+  transition: all 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
